# hr-seller-backend

./: .env  .env.example  .gitignore  Dockerfile  alembic.ini  celerybeat-schedule.db  docker-compose.yml  pyproject.toml  seller.sql  tasks.py
app/: main.py
app/api/: base_route.py
app/api/auth/: routers.py
app/api/sellers/: routers.py  schemas.py  services.py
app/core/: celery.py  settings.py
app/core/db/: __init__.py  base.py  get_session.py  session.py
app/endpoints/: base_route.py
app/endpoints/assistants/: routers.py  services.py
app/endpoints/auth/: routers.py  schemas.py  services.py
app/endpoints/seller/: routers.py  services.py
app/endpoints/sellers/: routers.py  schemas.py  services.py
app/endpoints/supervisor/: routers.py  services.py
app/endpoints/tenants/: routers.py  schemas.py  services.py
app/endpoints/users/: routers.py  schemas.py  services.py
app/grpc/tenant/: tenant_pb2_grpc.py
app/grpc/tenant_plans/: plans.proto  plans_pb2.py  plans_pb2_grpc.py
app/jobs/: __init__.py  backup.py  base.py
app/models/: __init__.py  admin.py  choices.py
app/models/migrations/: env.py
app/models/tenants/: __init__.py  monthly_trans.py  telegram_chat.py  tenant.py
app/models/users/: __init__.py  requests.py  seller_trans.py  transactions.py  user.py
app/resources/fields/: __init__.py  percentage.py  positive_int.py  username.py
app/resources/grpc/: client.py
app/utils/: __init__.py  exceptions.py  jwt.py  time.py
scripts/: backup.py  create_user.py  seed_telegram_chats.py  sync_tenants_from_core.py
(+48 files in other folders)
