[project]
name = "hr-seller-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "grpcio>=1.80.0",
    "grpcio-tools>=1.80.0",
    "invoke>=3.0.3",
    "passlib[argon2]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.12.1",
    "python-decouple>=3.8",
    "sqladmin>=0.25.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "ipython>=9.13.0",
    "ruff>=0.15.12",
]
